Fix ie style and collapse detail pane
	fix #481

--- a/src/app/detail/styles/_detail-aside.scss
+++ b/src/app/detail/styles/_detail-aside.scss
@@ -10,6 +10,7 @@
 
     display: flex;
     flex-direction: column;
+    position: relative;
 
     .detail-aside-group-title {
         height: 50px;
